--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
 
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
+		<title>Mirella santos</title>
+		<link rel="stylesheet" href="style.css">
 
+	</head>
+
+	<body>
+	    <img id="banner" src="banner.jpg">
+
+
+        "Estou triste. Porque agora vou ter que parar de 'galinhar' para 6 milhões de pessoas. Porque agora é para 7", brincou, em um vídeo compartilhado na rede social.
 
