--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
 	</head>
 
 	<body>
-	    <img id="banner" src="banner.jpg">
+	    
+    <h1>Mirella Santos</h1>
+		
+		<P>A pernambucana Mirella Santos, uma das "Gêmeas Lacração", viralizou nas redes sociais ao mostrar o cotidiano com 
+		a família.</P>
+		
+		<p> Em dois dias e meio, a cantora e dançarina ganhou, aproximadamente, um milhão de seguidores no Instagram, onde ela posta
+		 os momentos com a irmã, Marielly Santos; o marido, o surfista Gabriel Farias; e a cantora MC Loma e a filha recém-nascida, Melanie.</p>
 
+		<p>Em dois dias e meio, cantora e dançarina ganhou quase 1 milhão de seguidores no Instagram. Ela e a irmã, Marielly, trabalham com MC Loma, de quem são amigas.
+		 Juntas, 'estouraram' em 2018, com a música 'Envolvimento.</p>
 
-        "Estou triste. Porque agora vou ter que parar de 'galinhar' para 6 milhões de pessoas. Porque agora é para 7", brincou, em um vídeo compartilhado na rede social.
+		<p>Na segunda (17), Mirella estava com um crescimento de, aproximadamente, 200 mil seguidores por dia no Instagram e chegou aos 5 milhões.</p>
+		
+		<p>Na quarta (19), o crescimento já tinha dobrado, e ela atingiu 6 milhões de seguidores. As impressões, número de vezes que um post ou o 
+		  perfil dela apareceu na tela dos  usuários, chegaram a 2 bilhões.</p>
 
+		  <p></p>"Estou triste. Porque agora vou ter que parar de 'galinhar' para 6 milhões de pessoas. Porque agora é para 7", brincou, em um vídeo
+		   compartilhado na rede social. As brincadeiras e a espontaneidade de Mirella conquistaram o público.</p>
+
+		  <P>  As mulheres, que são maioria na rede social dela, são carinhosamente chamadas por ela de "linhas", que vem 
+			da palavra "galinha", uma alusão ao comportamento "sem freio" da pernambucana.</p>
+			</body>
+</html>
